--- a/Index.html
+++ b/Index.html
@@ -8,12 +8,19 @@
 </style>
   </head>
   <body>
-
+  <div class="image/jpeg">
     <div class="container">
-
+     <head>
+       </body>
+     </head>
       <h1>My.Photo</h1>
       <p><strong>Rathana.Phone.Shop1</strong></p>
-
+      <div class="container">
+        <h1>Subscribe</h1>
+        <form>
+          <input type="email" placeholder="Enter Email........" required>
+          <button type="submit" class="button_1">Subscribe</button>
+        </form>
       <p>
        work in Phonm.penh.live.in.cambodia.Contact.to.Address.rathanhon29@gmail.com.
       </p>
