--- a/Index.html
+++ b/Index.html
@@ -3,17 +3,18 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
-    <title>https://phonrathana.github.io./website.info</title>
+    <meta name="description" content="website">
+    <title>Rathana.Phone.Shop1</title>
     <style type="text/css" media="screen">
 </style>
   </head>
   <body>
-  <div class="image/jpeg">
+  <img src="[[profile.imageUrl]]"/>
     <div class="container">
      <head>
        </body>
      </head>
-      <h1>My.Photo</h1>
+      <h1><span>My.Photo</span></h1>
       <p><strong>Rathana.Phone.Shop1</strong></p>
       <div class="container">
         <h1>Subscribe</h1>
@@ -33,6 +34,7 @@
       </p>
 
       <p>
+        <link rel="import" href="elements.html">
         <a href="https://phonrathana.github.io/website.info/pages/">Read the full documentation</a>
         for more information about using <strong>GitHub Pages</strong>.
       </p>
@@ -43,14 +45,13 @@
      </a>
       </div>
        <a href="https://phonrathana.github.io/website.info/" class="logo logo-img-1x">
-         <img width="32" height="32" title="" alt="" 
+         <img width="32" height="32" title="" alt="" src="background:url('.https://phonrathana.github.io./website.info/profile.logo.jpeg')"
       </a>
     </div>
        <a href="https://phonrathana.gthub.io/website.info" class="logo logo-img-2x">
-         <img width="32" height="32" title="" alt="" src="data:image/
+         <img width="32" height="32" title="" alt="" src="background:url('http://phonrathana.github.io./website.info./profile.logo.jpeg')"
       </a>
     </div>
-   <div>
-  </head>
+ </script>
  <body>
 </html>
