--- a/Index.html
+++ b/Index.html
@@ -45,11 +45,11 @@
      </a>
       </div>
        <a href="https://phonrathana.github.io/website.info/" class="logo logo-img-1x">
-         <img width="32" height="32" title="" alt="" src="background:url('.https://phonrathana.github.io./website.info/profile.logo.jpeg')"
+         <img width="100px" height="100px" title="" alt="" src="background:url('.https://phonrathana.github.io./website.info/profile.logo.jpeg')"
       </a>
     </div>
        <a href="https://phonrathana.gthub.io/website.info" class="logo logo-img-2x">
-         <img width="32" height="32" title="" alt="" src="background:url('http://phonrathana.github.io./website.info./profile.logo.jpeg')"
+         <img width="100px" height="100px" title="" alt="" src="background:url('http://phonrathana.github.io./website.info./profile.logo.jpeg')"
       </a>
     </div>
  </script>
