--- a/Index.html
+++ b/Index.html
@@ -40,16 +40,16 @@
       </p>
 
       <div id="suggestions">
-        <a href="https://phonrathana.github.io/website.info">GitHub Status</a> &mdash;
+        <a href="https://phonrathana.github.io/website.info">phonrathana.github.io</a> &mdash;
         <a href="https://twitter.com/githubstatus">@phonrathana</a>
      </a>
       </div>
        <a href="https://phonrathana.github.io/website.info/" class="logo logo-img-1x">
-         <img width="100px" height="100px" title="" alt="" src="background:url('.https://phonrathana.github.io./website.info/profile.logo.jpeg')"
+         <img width="100px" height="100px" title="" alt="" src="url('.https://phonrathana.github.io./website.info/profile.logo.jpeg')"
       </a>
     </div>
        <a href="https://phonrathana.gthub.io/website.info" class="logo logo-img-2x">
-         <img width="100px" height="100px" title="" alt="" src="background:url('http://phonrathana.github.io./website.info./profile.logo.jpeg')"
+         <img width="100px" height="100px" title="" alt="" src="url('http://phonrathana.github.io./website.info./profile.logo.jpeg')"
       </a>
     </div>
  </script>
