--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -38,7 +38,7 @@
       </p>
 
       <div id="suggestions">
-        <a href="https://phonrathana.github.io/website.info">GitHub Status</a> &mdash;
+        <a href="https://phonrathana.github.io/website.info">phonrathana.github.io</a> &mdash;
         <a href="https://twitter.com/githubstatus">@phonrathana</a>
      </a>
       </div>
@@ -47,7 +47,7 @@
       </a>
     </div>
        <a href="https://phonrathana.gthub.io/website.info" class="logo logo-img-2x">
-         <img width="32" height="32" title="" alt="" src="data:image/
+         <img width="32" height="32" title="" alt="" src="
       </a>
     </div>
    <div>
