--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
   <head>
    <meta charset="utf-8">
    <meta name="description" content="Affordable and professional web ">
-	<meta name="keywords" content="web design,">
+	<meta name="keywords" content="web-app,">
   	<meta name="author" content="website">
     <title>Deisgn | About</title>
     <title>online store| Services</title>
@@ -51,13 +51,13 @@
             <li>
               <h3>♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️</h3>
               <p>♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️</p>
-					  <p>♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️</p>
+              <p>♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️♥️</p>
            </li>
             <li>
               <h3></h3>
-              <p>🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺</p>
-					  <p>🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺</p>
-					  <p>🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺</p>
+           <p>🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺</p>
+            <p>🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺</p>
+           <p>🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺🌺</p>
             </li>
           </ul>
         </article>
