--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
   <head>
    <meta charset="utf-8">
    <meta name="description" content="Affordable and professional web ">
-	<meta name="keywords" content="web-app,">
+	<meta name="keywords" content=""web design, affordable web design, professional web design">
   	<meta name="author" content="website">
     <title>Deisgn | About</title>
     <title>online store| Services</title>
@@ -65,24 +65,25 @@
           <div class="dark">
             <h3>Get A Quote</h3>
             <form class="quote">
-  						<div>
-  							<label>Name</label><br>
-  							<input type="text" placeholder="Name">
-  						</div>
-  						<div>
-  						   <label>lastName</label><br>
-  							<input type="text" placeholder="lastName">
-  					</div>
-  						<div>
-  							<label>Email</label><br>
-  							<input type="email" placeholder="Email Address">
-  						</div>
-  						<div>
-  							<label>Message</label><br>
-  							<textarea placeholder="Message"></textarea>
-  						</div>
-  						<button class="button_2" type="submit">Send</button>
-					</form>
+  	<div>
+  	  <label>Name</label><br>
+  	  <input type="text" placeholder="Name">
+   </div>
+      <div>
+         <label>lastName</label><br>
+  	 <input type="text" placeholder="lastName">
+   </div>
+     <div>
+        <label>Email</label><br>
+  	<input type="email" placeholder="Email Address">
+    </div>
+      <div>
+  	<label>Message</label><br>
+        <textarea placeholder="Message"></textarea>
+   </div>
+ </form>		    
+      <button class="button_2" type="submit">Send</button>
+  </form>
           </div>
         </aside>
       </div>
