--- a/Index.html
+++ b/Index.html
@@ -45,11 +45,11 @@
      </a>
       </div>
        <a href="https://phonrathana.github.io/website.info/" class="logo logo-img-1x">
-         <img width="100px" height="100px" title="" alt="" src="url('./profile.logo.jpeg')"
+         <img width="100px" height="100px" title="" alt="" src="url('image/profile.logo.jpeg')"
       </a>
     </div>
        <a href="https://phonrathana.gthub.io/website.info" class="logo logo-img-2x">
-         <img width="100px" height="100px" title="" alt="" src="url('/profile.logo.jpeg')"
+         <img width="100px" height="100px" title="" alt="" src="url('image/profile.logo.jpeg')"
       </a>
     </div>
  </script>
