--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
+    <meta name="description" content="contact rathanaphon29@gmail.com">
     <meta name="description" content="website">
     <title>Rathana.Phone.Shop1</title>
     <style type="text/css" media="screen">
@@ -27,10 +28,9 @@
        work in Phonm.penh.live.in.cambodia.Contact.to.Address.rathanhon29@gmail.com.
       </p>
 
-      <p>
-        If this is your site, make sure that the filename case matches the URL
-        as well as any file permissions.<br>
-        For root URLs (like <code>http://example.com/</code>) you must provide an
+      <p>      
+        <br>
+        For root URLs (like <code>rathaphon29@gmail.com</code>) you must provide an
         <code>index.html</code> file.
       </p>
 
