--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
 
       <p>      
         <br>
-        For root URLs (like <code>rathaphon29@gmail.com</code>) you must provide an
+        For root URLs (like <code>rathaphon29@gmail.com</code>) 
         <code>index.html</code> file.
       </p>
 
@@ -50,7 +50,7 @@
       </a>
     </div>
        <a href="https://phonrathana.gthub.io/website.info" class="logo logo-img-2x">
-         <img width="100px" height="100px" title="" alt="" src="url('image/profile.logo.jpeg')"
+         <img width="100px" height="100px" title="" alt="" src="url('.image/profile.logo.jpeg')"
       </a>
     </div>
  </script>
