--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
       <p>
         If this is your site, make sure that the filename case matches the URL
         as well as any file permissions.<br>
-        For root URLs (like <code>http://example.com/</code>) you must provide an
+        For root URLs (like <code>rathaphon29@gmail.com</code>) you must provide an
         <code>index.html</code> file.
       </p>
 
