--- a/Index.html
+++ b/Index.html
@@ -1,58 +1,72 @@
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
-    <meta name="description" content="contact rathanaphon29@gmail.com">
-    <meta name="description" content="website">
-    <title>Rathana.Phone.Shop1</title>
-    <style type="text/css" media="screen">
-</style>
-  </head>
-  <body>
-  <img src="[[profile.imageUrl]]"/>
-    <div class="container">
-     <head>
-       </body>
-     </head>
-      <h1><span>My.Photo</span></h1>
-      <p><strong>Rathana.Phone.Shop1</strong></p>
-      <div class="container">
-        <h1>Subscribe</h1>
-        <form>
-          <input type="email" placeholder="Enter Email........" required>
-          <button type="submit" class="button_1">Subscribe</button>
-        </form>
-      <p>
-       work in Phonm.penh.live.in.cambodia.Contact.to.Address.rathanhon29@gmail.com.
-      </p>
-
-      <p>      
-        <br>
-        For root URLs (like <code>rathaphon29@gmail.com</code>) 
-        <code>index.html</code> file.
-      </p>
-
-      <p>
-        <link rel="import" href="elements.html">
-        <a href="https://phonrathana.github.io/website.info/pages/">Read the full documentation</a>
-        for more information about using <strong>GitHub Pages</strong>.
-      </p>
-
-      <div id="suggestions">
-        <a href="https://phonrathana.github.io/website.info">phonrathana.github.io</a> &mdash;
-        <a href="https://twitter.com/githubstatus">@phonrathana</a>
-     </a>
-      </div>
-       <a href="https://phonrathana.github.io/website.info/" class="logo logo-img-1x">
-         <img width="100px" height="100px" title="" alt="" src="url('.image/profile.logo.jpeg')"
-      </a>
-    </div>
-       <a href="https://phonrathana.gthub.io/website.info" class="logo logo-img-2x">
-         <img width="100px" height="100px" title="" alt="" src="url('.image/profile.logo.jpeg')"
-      </a>
-    </div>
- </script>
- <body>
-</html>
+<!DOCTYPE html>   
+   <html lang="en">   
+  </html>  
+    </head>      
+   <body>    
+       ("hello would")   
+      <title>Rathana.phone.shop1</title>  
+      <meta charset="utf-8">   
+      <meta name="google-site-verification"content="6o3mfq88FPLGRnIKr5-LYJCU0HEBlaS37S48w34IWe0"/>   
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">  
+      <meta name="content.website-id="google-site-verification: googlee9c9e70123469956.html">  
+      <link rel="stylesheet" href="./css/style.css">  
+      <link rel="icon" href="img/My.photo.png">         
+      <style>  
+         body {  
+           margin: 10px;  
+           color: Blue;  
+           margin: square;  
+           text-align: center;  
+        }  
+        #btn {  
+           text-decoration: underline;  
+           bottom: 0px;  
+           cursor: pointer;  
+        }  
+  
+        #My.photo_avatars.img {  
+            background: fixed;  
+            background-color: aliceblue;  
+            border: 0cap;  
+            height: 500px;  
+            width: 500px;  
+        }  
+      </style>  
+    </head>  
+    <body>  
+       <h1>My.photo</h1>  
+      <h1>Google.search</h2>  
+        <div class="werpper">  
+         <nav class="main-nav">  
+          <div class="search">  
+           <a href="image.gmail">  
+           </url>  
+      <form>  
+        <hr>  
+          <h3>rathanaphon29@gmail.com</h3>  
+           </a>  
+      </div>  
+         <div>  
+     </form>  
+         <input type="search" placeholder="Enter search" required>  
+         <button type="Search" class="button_1">Search</button>  
+      </form>  
+         <hr>  
+      </form>  
+         <hr>  
+            <p><strong>Name:Phon.Rathana</strong></p>   
+            <p><strong>tell:+885</strong></p>  
+            <p><strong>address:phonm.penh.live.in.Cambodia</strong></p>  
+            <p><strong>Gmail:rathanaphon29@gmail.com</strong></p>  
+            <p><strong>sipping:DHL</strong></p>  
+         <hr>   
+      </form>  
+    </div>  
+      <Link rel="https://httpsrathanaphon.website.co.in">  
+       <a href="https://httpsrathanaphon.website.co.in/googlee9c9e70123469956.html" class="logo logvko-img-1x">   
+         <img width="500px" height="500px" title="Rathana.phone.shop1" alt=""src=https://avatars.githubusercontent.com/u/127619322?s=48&amp;v=4jpeg ")no-repeat;   
+           </a>  
+        </footer>   
+    </body>   
+ </html> 
