--- a/Index.html
+++ b/Index.html
@@ -29,8 +29,8 @@
             background: fixed;  
             background-color: aliceblue;  
             border: 0cap;  
-            height: 500px;  
-            width: 500px;  
+            height: 300px;  
+            width: 300px;  
         }  
       </style>  
     </head>  
@@ -65,7 +65,7 @@
     </div>  
       <Link rel="https://httpsrathanaphon.website.co.in">  
        <a href="https://httpsrathanaphon.website.co.in/googlee9c9e70123469956.html" class="logo logvko-img-1x">   
-         <img width="500px" height="500px" title="Rathana.phone.shop1" alt=""src=https://www.google.com/images/srpr/logo3w.png", 4, 300, 300)   
+         <img width="300px" height="300px" title="Rathana.phone.shop1" alt=""src=IMAGE(https://www.google.com/images/srpr/logo3w.png", 4, 300, 300)   
            </a>  
         </footer>   
     </body>   
