--- a/Index.html
+++ b/Index.html
@@ -19,13 +19,13 @@
            margin: square;  
            text-align: center;  
         }  
-        #btn {  
+        #bottun {  
            text-decoration: underline;  
            bottom: 0px;  
            cursor: pointer;  
         }  
   
-        #My.photo_avatars.img {  
+        #My.photo.img {  
             background: fixed;  
             background-color: aliceblue;  
             border: 0cap;  
@@ -36,15 +36,18 @@
     </head>  
     <body>  
        <h1>My.photo</h1>  
-      <h1>Google.search</h2>  
-        <div class="werpper">  
-         <nav class="main-nav">  
-          <div class="search">  
-           <a href="image.gmail">  
-           </url>  
+      <h1>Google.search</h2>
+         <div class="werpper">  
+           <nav class="main-nav">  
+            <div class="search">  
+           <a href="image/gmail">
+         <div class="menu">
+      <div class="image/Rathana.phon-logo.jpeg">
+    <div class="image/square">
+       </url>  
+       <h3>rathanaphon29@gmail.com</h3>  
       <form>  
-        <hr>  
-          <h3>rathanaphon29@gmail.com</h3>  
+        <hr>    
            </a>  
       </div>  
          <div>  
@@ -65,8 +68,8 @@
     </div>  
       <Link rel="https://httpsrathanaphon.website.co.in">  
        <a href="https://httpsrathanaphon.website.co.in/googlee9c9e70123469956.html" class="logo logvko-img-1x">   
-         <img width="300px" height="300px" title="Rathana.phone.shop1" alt=""src=https://1drv.ms/x/s!Ak6lKQ4TurQLhDT-2nvdBF0OdMXk?e=ONc7bW")
+        <img class="business-logo mr-3" src=image"https://httpsrathanaphon.websites.co.in/files/971938/business/logo/logo-1332537698.jpeg?v"=744005152"width="300px height="300px">
            </a>  
-        </footer>   
-    </body>   
+       </footer>   
+  </body>   
  </html> 
