--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
     </div>  
       <Link rel="https://httpsrathanaphon.website.co.in">  
        <a href="https://httpsrathanaphon.website.co.in/googlee9c9e70123469956.html" class="logo logvko-img-1x">   
-        <img class="business-logo mr-3" src=image"https://httpsrathanaphon.websites.co.in/files/971938/business/logo/logo-1332537698.jpeg?v"=744005152"width="300px height="300px">
+        <img width= "300px= height= "300px"business-logo mr-3" src=image"https://httpsrathanaphon.websites.co.in/files/971938/business/logo/logo-1332537698.jpeg?v"=744005152"width="300px height="300px">
            </a>  
        </footer>   
   </body>   
