--- a/Index.html
+++ b/Index.html
@@ -1,65 +1,45 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>hello world!</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome-font-awesome.min.css">
+     <link rel="stylesheet" href="./css/style.css"> 
+     <style>
+         body { 
+          margin: 10px; 
+          color: Blue; 
+          width: 300px,
+          height: 300px,
+          margin: square; 
+          text-align: center; 
+       } 
+       #bottum { 
+          text-decoration: underline; 
+          bottom: 0px; 
+          cursor: pointer; 
+       } 
+     </style>
+</head>
+<body>
+    <h1>My.photo</h1>
+    <p>
+     </form> 
+        <hr> 
+           <p><strong>Name:Phon.Rathana</strong></p>  
+           <p><strong>tell:+885</strong></p> 
+           <p><strong>Country:phonm.penh.in.Cambodia </strong></p> 
+           <p><strong>contact:rathanaphon29@gmail.com </strong></p> 
+           <p><strong>live:Phome.Penh.home.St5.Dangkor,Dangkor,</strong></p> 
+        <hr>  
+      </form>
+         </div> 
+     <Link rel="https://httpsrathanaphon.website.co.in"> 
+      <a href="https://httpsrathanaphon.website.co.in/googlee9c9e70123469956.html" class="logo logvko-img-1x">  
+        <img width="300px" height="300px" title="Rathana.phone.shop1" alt=""src=https://avatars.githubusercontent.com/u/127619322?s=48&amp;v=4jpeg ")>
+       </a> 
+ </body>
+   </html>
 
-<!DOCTYPE html>   
-   <html lang="en">   
-  </html>  
-    </head>      
-   <body>    
-       ("hello would")   
-      <title>Rathana.phone.shop1</title>  
-      <meta charset="utf-8">   
-      <meta name="google-site-verification"content="6o3mfq88FPLGRnIKr5-LYJCU0HEBlaS37S48w34IWe0"/>   
-      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">  
-      <meta name="content.website-id="google-site-verification: googlee9c9e70123469956.html">  
-      <link rel="stylesheet" href="./css/style.css">  
-      <link rel="icon" href="img/My.photo.png">         
-      <style>  
-         body {  
-           margin: 10px;  
-           color: Blue;  
-           margin: square;  
-           text-align: center;  
-        }  
-        #bottun {  
-           text-decoration: underline;  
-           bottom: 0px;  
-           cursor: pointer;  
-        }  
-  
-        #My.photo.img {  
-            background: fixed;  
-            background-color: aliceblue;  
-            border: 0cap;  
-            height: 300px;  
-            width: 300px;  
-        }  
-      </style>  
-    </head>  
-    <body>  
-       <h1>My.photo</h1>  
-      <h1>Google.search</h2>
-         <div class="werpper">  
-       <h3>rathanaphon29@gmail.com</h3>  
-      <form>
-         <div>  
-     </form>  
-         <input type="search" placeholder="Enter search" required>  
-         <button type="Search" class="button_1">Search</button>  
-      </form>  
-         <hr>  
-      </form>  
-         <hr>  
-            <p><strong>Name:Phon.Rathana</strong></p>   
-            <p><strong>tell:+885</strong></p>  
-            <p><strong>address:phonm.penh.live.in.Cambodia</strong></p>  
-            <p><strong>Gmail:rathanaphon29@gmail.com</strong></p>  
-            <p><strong>sipping:DHL</strong></p>  
-         <hr>   
-      </form>  
-    </div>  
-      <Link rel="https://httpsrathanaphon.website.co.in">  
-       <a href="https://httpsrathanaphon.website.co.in/googlee9c9e70123469956.html" class="logo logvko-img-1x">   
-        <img width= "300px= height= "300px"business-logo mr-3" src=image"https://httpsrathanaphon.websites.co.in/files/971938/business/logo/logo-1332537698.jpeg?v"=744005152"width="300px height="300px">
-           </a>  
-       </footer>   
-  </body>   
- </html> 
