--- a/Index.html
+++ b/Index.html
@@ -11,8 +11,8 @@
          body { 
           margin: 10px; 
           color: Blue; 
-          width: 300px,
-          height: 300px,
+          width: 300px;
+          height: 300px;
           margin: square; 
           text-align: center; 
        } 
