--- a/Index.html
+++ b/Index.html
@@ -1,2 +1,88 @@
+DOCTYPE html>
+<html>
+    <head>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />  
+        <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome-font-awesome.min.css"
+         <title>®Rathana.Phone.shop1</title>
+         <link rel="stylesheet" href="./css/style.css">   
+         <style type="text/css">
+         ,button{
+	           font-family: Quicksand, sans-serif;
+        }
+           img {
+              width: 350px;
+              height: 400px;
+         }
+            body{
+	            background: white;
+	            color:#555;
+              text-align: center;
+         }
+           .logo>img {
+              margin-top:30%;
+              font-size:30px;
+	           font-weight:normal;
+         }
+            .brackets{
+	            font-family: Advent Pro, sans-serif;
+         }
+            .left{
+	            color:tomato;
+         }
+            right{
+	           color:dodgerblue;
+         }
+           .sample{
+	            padding:20px;
+              font-size:18px;
+	            background: inherit;
+	            color:inherit;
+         }
+            #button{
+	            margin-top:10px;
+	            background:dodgerblue;
+	            color:white;
+	            width:80%;
+              height:70px;
+	            font-size: 20px;
+          	  outline: none;
+	            border:5px solid deepskyblue;
+	            border-radius: 5px;
+          }
+            #button:active{
+	           transform: scale(0.95);
+	       }
+	         li {
+              height: 10px; 
+              padding: 10px;
+              color: blue;
+          }
+   </style>	
+ </head>
+ <body>
+        <div class='logo>img'/>
+            <br>
+                <span class='brackets left'></span>
+                <span>👋</span>
+                <span class='brackets right'></span>
+            </br>
+            hello would 
+        <div>
+           <div class=”container-img”>
+             <img src="https://picsum.photos/400/300" width="100%">
+         </div>
+          <p class='sample'>test</p>
+        <button id='button' onClick='onsininclick()'>signinClick</button>
+<body>
+      <script type="text/javascript">
+           
+        function hamMenuClick()
+          {
+           document.getElementById("onsinin").innerHTML.toggle("active");
+           document.getElementById("ul").innerHTML.toggle("link");
+          }
+</body>
+</html>
 
 
