--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
-DOCTYPE html>
+<!DOCTYPE html>
 <html>
-    <head>
+<head>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />  
         <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome-font-awesome.min.css"
@@ -14,32 +14,32 @@ DOCTYPE html>
               width: 350px;
               height: 400px;
          }
-            body{
+                body{
 	            background: white;
 	            color:#555;
-              text-align: center;
+                   text-align: center;
          }
            .logo>img {
-              margin-top:30%;
-              font-size:30px;
-	           font-weight:normal;
+                 margin-top:30%;
+                 font-size:30px;
+	         font-weight:normal;
          }
             .brackets{
 	            font-family: Advent Pro, sans-serif;
          }
-            .left{
+               .left{
 	            color:tomato;
          }
-            right{
+              right{
 	           color:dodgerblue;
          }
-           .sample{
+             .sample{
 	            padding:20px;
               font-size:18px;
 	            background: inherit;
 	            color:inherit;
          }
-            #button{
+             #button{
 	            margin-top:10px;
 	            background:dodgerblue;
 	            color:white;
