--- a/Index.html
+++ b/Index.html
@@ -11,26 +11,25 @@
 	           font-family: Quicksand, sans-serif;
         }
            img {
-              width: 350px;
-              height: 400px;
+             width: 350px;
+             height: 400px;
          }
-                body{
-	            background: white;
-	            color:#555;
+            body{
+	           background: white;
+	           color:#555;
               text-align: center;
          }
-           .logo>img {
+            .logo>img {
               margin-top:30%;
               font-size:30px;
-	           font-weight:normal;
          }
-           .brackets{
+            .brackets{
 	           font-family: Advent Pro, sans-serif;
          }
-           .left{
+            .left{
 	            color:tomato;
          }
-           right{
+            right{
 	           color:dodgerblue;
          }
             .sample{
@@ -39,7 +38,7 @@
 	            background: inherit;
 	            color:inherit;
          }
-            #button{
+            .button{
 	            margin-top:10px;
 	            background:dodgerblue;
 	            color:white;
@@ -50,7 +49,7 @@
 	            border:5px solid deepskyblue;
 	            border-radius: 5px;
           }
-            #button:active{
+            .button:active{
 	           transform: scale(0.95);
 	       }
 	         li {
