--- a/Index.html
+++ b/Index.html
@@ -7,55 +7,22 @@
          <title>®Rathana.Phone.shop1</title>
          <link rel="stylesheet" href="./css/style.css">   
          <style type="text/css">
-,button{
-    font-family: Quicksand, sans-serif;
+button {
+           border: none;
+           background: #0076ff;
+           border-radius: 5px;
+           padding: 5px;
+           color: #fff;
+           font-weight: bold;
+           font-size: 20px;
+           text-transform: uppercase;
 }
  img {
-   width: 350px;
-   height: 400px;
-}
-  body{
-	 background: white;
-	 color:#555;
-    text-align: center;
-}
- .logo>img {
-    margin-top:30%;
-    font-size:30px;
-}
- .brackets{
-	 font-family: Advent Pro, sans-serif;
-}
- .left{
-	 color:tomato;
-}
- right{
-	 color:dodgerblue;
-}
- .sample{
-	 padding:20px;
-   font-size:18px;
-	 background: inherit;
-	 color:inherit;
-}
-.button{
-	margin-top:10px;
-	background:dodgerblue;
-	color:white;
-	width:80%;
-  height:70px;
-  font-size: 20px;
-  outline: none;
-  border:5px solid blue;
-  border-radius: 5px;
+            width: 350px;
+            height: 400px;
 }
 .button:active{
-  transform: scale(0.95);
-}
-li {
-  height: 10px; 
-  padding: 10px;
-  color: blue;
+            transform: scale(0.95);
 }
    </style>	
  </head>
