--- a/Index.html
+++ b/Index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
+    <head>
+        <title>®Rathana.Phone.shop1</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />  
         <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome-font-awesome.min.css"
-         <title>®Rathana.Phone.shop1</title>
          <link rel="stylesheet" href="./css/style.css">   
          <style type="text/css">
-button {
-           border: none;
-           background: #0076ff;
-           border-radius: 5px;
-           padding: 5px;
-           color: #fff;
-           font-weight: bold;
-           font-size: 20px;
-           text-transform: uppercase;
+html, button{
+	font-family: Quicksand, sans-serif;
 }
- img {
-            width: 350px;
-            height: 400px;
+body{
+	background: white;
+	color:#555;
+	text-align: center;
 }
-.button:active{
-            transform: scale(0.95);
+.logo{
+	margin-top:30%;
+	font-size:30px;
+	font-weight:normal;
+}
+.brackets{
+	font-family: Advent Pro, sans-serif;
+}
+.left{
+	color:tomato;
+}
+.right{
+	color:dodgerblue;
 }
    </style>	
  </head>
@@ -33,7 +38,7 @@ button {
                 <span>👋</span>
                 <span class='brackets right'></span>
             </br>
-            hello would 
+           <h1>hello would</h1> 
         <div>
            <div class=”container-img”>
              <img src="https://picsum.photos/400/300" width="100%">
