--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,7 @@ body{
 <body>
       <script type="text/javascript">
            
-        function hamMenuClick()
+        function onsignInClick()
           {
            document.getElementById("onsinin").innerHTML.toggle("active");
            document.getElementById("ul").innerHTML.toggle("link");
