--- a/Index.html
+++ b/Index.html
@@ -23,37 +23,37 @@ body{
 .brackets{
 	font-family: Advent Pro, sans-serif;
 }
-.left{
-	color:tomato;
+ footer {
+     color: blue;
 }
-.right{
-	color:dodgerblue;
-}
-   </style>	
+	    </style>	
  </head>
  <body>
-        <div class='logo>img'/>
-            <br>
-                <span class='brackets left'></span>
-                <span>👋</span>
-                <span class='brackets right'></span>
-            </br>
-           <h1>hello would</h1> 
+        <div class='logo> img'/>
+            <footer>
+                <h1>website</h1>
+             <h2>hello👋would</h2> 
+          </footer>
         <div>
+             </div>
+            <div class="g-signin2" data-onsuccess="SignIn"></div>
            <div class=”container-img”>
-             <img src="https://picsum.photos/400/300" width="100%">
-         </div>
-          <p class='sample'>test</p>
-        <button id='button' onClick='onsininclick()'>signinClick</button>
+             <img src="https://picsum.photos/400/250" width="100%">
+          </div> 
+              ®Rathana.Phone.shop1
+        <button id='button' onClick='sininclick()'>signin</button>
 <body>
       <script type="text/javascript">
            
-        function onsignInClick()
+        function onsignIn()
           {
            document.getElementById("onsinin").innerHTML.toggle("active");
            document.getElementById("ul").innerHTML.toggle("link");
           }
 </body>
 </html>
+
+		
+
 
 
